[metadata]
version = 1.0.0
url = https://github.com
keywords = logging
        pytest
        file
        parser
        output
        input
	restful
	rest
	fastapi

license_file =
        LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pydantic
  pytest

[tool:pytest]
testpaths = tests
log_level = info
